# jrmpeditor

./: .gitignore  .jrmph  .jrmplt  .jrmps  .jrmpz  0.jrmpl  CMakeLists.txt  README.md
res/: default.jrmp
res/shaders/: f.glsl  sprite_v.glsl  v.glsl
src/: app.c  app.h  graphics.c  graphics.h  main.c  viewport.c  viewport.h
